workspace-sf/force-app/main/default/objects/GeradorOferta__c/GeradorOferta__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar e agrupar as ofertas geradas.</description>
    <label>Gerador de Questionário</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gerador de Questionário</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>