workspace-sf/force-app/main/default/objects/GeradorOferta__c/fields/CanalDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>CanalDistribuicao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canal de distribuicão</label>
    <referenceTo>CanalDistribuicao__c</referenceTo>
    <relationshipLabel>Gerador de Ofertas</relationshipLabel>
    <relationshipName>GeradorOfertas</relationshipName>
    <type>Lookup</type>
</CustomField>