workspace-sf/force-app/main/default/objects/GeradorOferta__c/fields/CodigoOfertaConsultiva__c.field-meta.xml
<CustomField>
    <fullName>CodigoOfertaConsultiva__c</fullName>
    <label>Codigo de Oferta Consultiva</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>