workspace-sf/force-app/main/default/objects/GeradorOferta__c/fields/FinalVigencia__c.field-meta.xml
<CustomField>
    <fullName>FinalVigencia__c</fullName>
    <label>Final da Vigência</label>
    <type>Date</type>
</CustomField>