workspace-sf/force-app/main/default/objects/GeradorOferta__c/fields/identificacaoRepresentante__c.field-meta.xml
<CustomField>
    <fullName>identificacaoRepresentante__c</fullName>
    <label>Indentificação do Representante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>