workspace-sf/force-app/main/default/objects/GeradorOferta__c/fields/InicioVigencia__c.field-meta.xml
<CustomField>
    <fullName>InicioVigencia__c</fullName>
    <label>Início da Vigência</label>
    <type>Date</type>
</CustomField>