workspace-sf/force-app/main/default/objects/GeradorOferta__c/fields/MeioComercializacao__c.field-meta.xml
<CustomField>
    <fullName>MeioComercializacao__c</fullName>
    <label>Meio de comercialização</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MeioComercializacao</valueSetName>
    </valueSet>
</CustomField>