workspace-sf/force-app/main/default/objects/GeradorOferta__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em criação</fullName>
            </value>
            <value>
                <fullName>Em Aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Desativado</fullName>
            </value>
            <value>
                <fullName>Elaboração do questionário</fullName>
            </value>
            <value>
                <fullName>Elaboração da inteligência</fullName>
            </value>
            <value>
                <fullName>Em ativação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>