workspace-sf/force-app/main/default/objects/GeradorOferta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>CodigoOfertaConsultiva__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>