workspace-sf/force-app/main/default/objects/GeradorOferta__c/listViews/Filtrado.listView-meta.xml
<ListView>
    <fullName>Filtrado</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>ESPECIFICO-VIAGEM</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Seguro Viagem APP</value>
    </filters>
    <label>Filtrado</label>
</ListView>